// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block renders correctly 1`] = `
<div
  className="sc-AxjAm sc-AxhCb bNLhIJ"
>
  <div
    className="sc-AxjAm fIbOII"
  >
    <h2
      className="sc-AxirZ jaRDmo"
      color="primary"
      fontSize={2}
    >
      Test Block
    </h2>
  </div>
  <div
    className="sc-AxjAm jBohcl"
  />
</div>
`;

exports[`Block renders correctly with children 1`] = `
<div
  className="sc-AxjAm sc-AxhCb bNLhIJ"
>
  <div
    className="sc-AxjAm fIbOII"
  >
    <h2
      className="sc-AxirZ jaRDmo"
      color="primary"
      fontSize={2}
    >
      Test Block
    </h2>
  </div>
  <div
    className="sc-AxjAm jBohcl"
  >
    <p>
      Test Children
    </p>
  </div>
</div>
`;

exports[`Block renders with a border 1`] = `
<div
  className="sc-AxjAm sc-AxhCb eOIZoi"
>
  <div
    className="sc-AxjAm fIbOII"
  >
    <h2
      className="sc-AxirZ cXGILF"
      color="primary"
      fontSize={2}
    >
      Test Block
    </h2>
  </div>
  <div
    className="sc-AxjAm jBohcl"
  />
</div>
`;
